<?xml version="1.0"?>
<package format="2">
    <name>statistics_msgs</name>
    <version>1.0.0</version>
    <description>ROS package for statistics message types</description>
    <maintainer email="william.talbot97@gmail.com">William Talbot</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>std_msgs</build_depend>
</package>
